# story-teller-backend

./: .gitignore  README.md  pyproject.toml
app/: main.py  tts_engine.py
app/api/: stories.py  voices.py
app/schemas/: story.py  voice.py
app/services/: audio.py  chunker.py  worker.py  xtts.py
app/storage/: memory.py
example-stories/: snowwhite.txt
