[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "xiaotaozi1127@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "python-multipart (>=0.0.21,<0.0.22)",
    "torch (>=2.9.1,<3.0.0)",
    "tts (>=0.22.0,<0.23.0)",
    "transformers (>=4.31.0,<4.35.0)",
    "tokenizers (>=0.13.3)",
    "torchcodec (>=0.9.1,<0.10.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "soundfile (>=0.13.1,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
